EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Test__c/fields/hed__Date_Received__c.field-meta.xml
<CustomField>
    <fullName>hed__Date_Received__c</fullName>
    <description>The date the test score is added to the system, either by manual upload or directly from an official source.</description>
    <inlineHelpText>La fecha de incorporación de la calificación de la prueba al sistema, ya sea por una carga manual o directamente de una fuente oficial.</inlineHelpText>
    <label>Date Received</label>
    <type>Date</type>
</CustomField>