EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Test__c/fields/hed__Source__c.field-meta.xml
<CustomField>
    <fullName>hed__Source__c</fullName>
    <description>Indicates whether the applicant or an official source reported this test.</description>
    <inlineHelpText>Indica si el solicitante o una fuente oficial reportaron esta prueba.</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Self Reported</fullName>
            </value>
            <value>
                <fullName>Official</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>