EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Test__c/fields/hed__Test_Date__c.field-meta.xml
<CustomField>
    <fullName>hed__Test_Date__c</fullName>
    <description>The date the applicant or official source indicates the test was started.</description>
    <inlineHelpText>La fecha del solicitante o fuente oficial indica que la prueba se inició.</inlineHelpText>
    <label>Test Date</label>
    <type>Date</type>
</CustomField>